src/objects/Country__c.object
<CustomObject>
    <description>DEPLOYMENT - Internal object for tracking Country Information and SFDC Global Deployment Status</description>
    <fields>
        <fullName>Account_Programs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Programs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIM360_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CIM360 Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIM360__c</fullName>
        <label>CIM360</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQPL__c</fullName>
        <label>CPQ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live - In Production</fullName>
                </value>
                <value>
                    <fullName>Implementation in Progress</fullName>
                </value>
                <value>
                    <fullName>Planned for Future 0 - 6 Months</fullName>
                </value>
                <value>
                    <fullName>Planned for Future - Greater than 6 Months</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQReadiness__c</fullName>
        <label>CPQ Readiness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQ_Users__c</fullName>
        <label># CPQ Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Analyst__c</fullName>
        <description>Country CRM Analyst Name(s)</description>
        <inlineHelpText>Enter the name of the CRM Analyst(s)</inlineHelpText>
        <label>CRM Analyst</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTIPL__c</fullName>
        <label>CTI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live - In Production</fullName>
                </value>
                <value>
                    <fullName>Implementation in Progress</fullName>
                </value>
                <value>
                    <fullName>Planned for Future 0 - 6 Months</fullName>
                </value>
                <value>
                    <fullName>Planned for Future - Greater than 6 Months</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CTI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseManagementPL__c</fullName>
        <label>Case Management</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live - In Production</fullName>
                </value>
                <value>
                    <fullName>Implementation in Progress</fullName>
                </value>
                <value>
                    <fullName>Planned for Future 0 - 6 Months</fullName>
                </value>
                <value>
                    <fullName>Planned for Future - Greater than 6 Months</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChatPL__c</fullName>
        <label>Chat</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live - In Production</fullName>
                </value>
                <value>
                    <fullName>Implementation in Progress</fullName>
                </value>
                <value>
                    <fullName>Planned for Future 0 - 6 Months</fullName>
                </value>
                <value>
                    <fullName>Planned for Future - Greater than 6 Months</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClinicalAffairsPL__c</fullName>
        <label>Clinical Affairs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live - In Production</fullName>
                </value>
                <value>
                    <fullName>Implementation in Progress</fullName>
                </value>
                <value>
                    <fullName>Planned for Future 0 - 6 Months</fullName>
                </value>
                <value>
                    <fullName>Planned for Future - Greater than 6 Months</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clinical_Affairs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clinical Affairs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commercial_Description__c</fullName>
        <label>Commercial Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_MDM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact MDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Manager__c</fullName>
        <description>Responsible for the Country.</description>
        <label>Country Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Implants</fullName>
                    <label>Global DPG Users</label>
                </value>
                <value>
                    <fullName>Afghanistan  AFG</fullName>
                </value>
                <value>
                    <fullName>Albania  ALB</fullName>
                </value>
                <value>
                    <fullName>Algeria  DZA</fullName>
                </value>
                <value>
                    <fullName>Argentina  ARG</fullName>
                </value>
                <value>
                    <fullName>Armenia  ARM</fullName>
                </value>
                <value>
                    <fullName>Australia AUS</fullName>
                </value>
                <value>
                    <fullName>Austria  AUT</fullName>
                </value>
                <value>
                    <fullName>Bahamas  BHS</fullName>
                </value>
                <value>
                    <fullName>Bahrain  BHR</fullName>
                </value>
                <value>
                    <fullName>Bangladesh  BGD</fullName>
                </value>
                <value>
                    <fullName>Barbados  BRB</fullName>
                </value>
                <value>
                    <fullName>Belarus  BLR</fullName>
                </value>
                <value>
                    <fullName>Belgium  BEL</fullName>
                </value>
                <value>
                    <fullName>Belize  BLZ</fullName>
                </value>
                <value>
                    <fullName>Bermuda  BMU</fullName>
                </value>
                <value>
                    <fullName>Bhutan  BTN</fullName>
                </value>
                <value>
                    <fullName>Bolivia BOL</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina  BIH</fullName>
                </value>
                <value>
                    <fullName>Botswana  BWA</fullName>
                </value>
                <value>
                    <fullName>Brazil  BRA</fullName>
                </value>
                <value>
                    <fullName>Bulgaria  BGR</fullName>
                </value>
                <value>
                    <fullName>Burundi  BDI</fullName>
                </value>
                <value>
                    <fullName>Cambodia  KHM</fullName>
                </value>
                <value>
                    <fullName>Cameroon  CMR</fullName>
                </value>
                <value>
                    <fullName>Canada  CAN</fullName>
                </value>
                <value>
                    <fullName>Cape Verde  CPV</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands  CYM</fullName>
                </value>
                <value>
                    <fullName>Central African Republic  CAF</fullName>
                </value>
                <value>
                    <fullName>Chad TCD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Implants</fullName>
                    <label>Global DPG</label>
                </value>
                <value>
                    <fullName>All Ortho</fullName>
                </value>
                <value>
                    <fullName>AFG</fullName>
                </value>
                <value>
                    <fullName>AGO</fullName>
                </value>
                <value>
                    <fullName>ALB</fullName>
                </value>
                <value>
                    <fullName>ARE</fullName>
                </value>
                <value>
                    <fullName>ARG</fullName>
                </value>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>ATF</fullName>
                </value>
                <value>
                    <fullName>AUS</fullName>
                </value>
                <value>
                    <fullName>AUT</fullName>
                </value>
                <value>
                    <fullName>AZE</fullName>
                </value>
                <value>
                    <fullName>BDI</fullName>
                </value>
                <value>
                    <fullName>BEL</fullName>
                </value>
                <value>
                    <fullName>BEN</fullName>
                </value>
                <value>
                    <fullName>BFA</fullName>
                </value>
                <value>
                    <fullName>BGD</fullName>
                </value>
                <value>
                    <fullName>BGR</fullName>
                </value>
                <value>
                    <fullName>BHR</fullName>
                </value>
                <value>
                    <fullName>BHS</fullName>
                </value>
                <value>
                    <fullName>BIH</fullName>
                </value>
                <value>
                    <fullName>BLM</fullName>
                </value>
                <value>
                    <fullName>BLR</fullName>
                </value>
                <value>
                    <fullName>BLZ</fullName>
                </value>
                <value>
                    <fullName>BMU</fullName>
                </value>
                <value>
                    <fullName>BOL</fullName>
                </value>
                <value>
                    <fullName>BRA</fullName>
                </value>
                <value>
                    <fullName>BRB</fullName>
                </value>
                <value>
                    <fullName>BRN</fullName>
                </value>
                <value>
                    <fullName>BTN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerServicePL__c</fullName>
        <label>Customer Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live - In Production</fullName>
                </value>
                <value>
                    <fullName>Implementation in Progress</fullName>
                </value>
                <value>
                    <fullName>Planned for Future 0 - 6 Months</fullName>
                </value>
                <value>
                    <fullName>Planned for Future - Greater than 6 Months</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cvent_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cvent Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Sell_Out__c</fullName>
        <description>Direct or Indirect information</description>
        <label>Sell out data details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DigitalSignaturePL__c</fullName>
        <label>Digital Signature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live - In Production</fullName>
                </value>
                <value>
                    <fullName>Implementation in Progress</fullName>
                </value>
                <value>
                    <fullName>Planned for Future 0 - 6 Months</fullName>
                </value>
                <value>
                    <fullName>Planned for Future - Greater than 6 Months</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_Company_Code__c</fullName>
        <description>Add the Local ERP Company Code</description>
        <inlineHelpText>Add the Local ERP Company Code</inlineHelpText>
        <label>ERP Company Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_System_Description__c</fullName>
        <label>ERP system description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailToCasePL__c</fullName>
        <label>Email To Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live - In Production</fullName>
                </value>
                <value>
                    <fullName>Implementation in Progress</fullName>
                </value>
                <value>
                    <fullName>Planned for Future 0 - 6 Months</fullName>
                </value>
                <value>
                    <fullName>Planned for Future - Greater than 6 Months</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_To_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email To Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSLPL__c</fullName>
        <label>FSL</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live - In Production</fullName>
                </value>
                <value>
                    <fullName>Implementation in Progress</fullName>
                </value>
                <value>
                    <fullName>Planned for Future 0 - 6 Months</fullName>
                </value>
                <value>
                    <fullName>Planned for Future - Greater than 6 Months</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_Users__c</fullName>
        <label># FSL Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldService__c</fullName>
        <label>Field Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live - In Production</fullName>
                </value>
                <value>
                    <fullName>Implementation in Progress</fullName>
                </value>
                <value>
                    <fullName>Planned for Future 0 - 6 Months</fullName>
                </value>
                <value>
                    <fullName>Planned for Future - Greater than 6 Months</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GeopointePL__c</fullName>
        <label>Geopointe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live - In Production</fullName>
                </value>
                <value>
                    <fullName>Implementation in Progress</fullName>
                </value>
                <value>
                    <fullName>Planned for Future 0 - 6 Months</fullName>
                </value>
                <value>
                    <fullName>Planned for Future - Greater than 6 Months</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geopointe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Geopointe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GetFeedbackPL__c</fullName>
        <label>Get Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live - In Production</fullName>
                </value>
                <value>
                    <fullName>Implementation in Progress</fullName>
                </value>
                <value>
                    <fullName>Planned for Future 0 - 6 Months</fullName>
                </value>
                <value>
                    <fullName>Planned for Future - Greater than 6 Months</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Get_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HUB__c</fullName>
        <label>HUB</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dubai (MENA)</fullName>
                    <label>Dubai (MEA)</label>
                </value>
                <value>
                    <fullName>Hong Kong (Asia)</fullName>
                </value>
                <value>
                    <fullName>Moscow</fullName>
                </value>
                <value>
                    <fullName>New Delhi</fullName>
                </value>
                <value>
                    <fullName>Nordics</fullName>
                </value>
                <value>
                    <fullName>Warsaw</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsideSalesPL__c</fullName>
        <label>Inside Sales</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live - In Production</fullName>
                </value>
                <value>
                    <fullName>Implementation in Progress</fullName>
                </value>
                <value>
                    <fullName>Planned for Future 0 - 6 Months</fullName>
                </value>
                <value>
                    <fullName>Planned for Future - Greater than 6 Months</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inside_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inside Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KOL_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KOL Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_Local_EA_App__c</fullName>
        <label>Link to Local EA App</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LocalCRMAnalyst__c</fullName>
        <inlineHelpText>0=Black 1=Red 2=Yellow 3=Green</inlineHelpText>
        <label>Local CRM Analyst</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0local_crm_analyst</fullName>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1local_crm_analyst</fullName>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2local_crm_analyst</fullName>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3local_crm_analyst</fullName>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LocalEAAnalyst__c</fullName>
        <label>Local EA Analyst</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LocalEAAppPL__c</fullName>
        <label>Local EA App</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live - In Production</fullName>
                </value>
                <value>
                    <fullName>Implementation in Progress</fullName>
                </value>
                <value>
                    <fullName>Planned for Future 0 - 6 Months</fullName>
                </value>
                <value>
                    <fullName>Planned for Future - Greater than 6 Months</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LocalProjectManager__c</fullName>
        <inlineHelpText>0=Black 1=Red 2=Yellow 3=Green</inlineHelpText>
        <label>Local Project Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0LPM</fullName>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1LPM</fullName>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2LPM</fullName>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3LPM</fullName>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LocalProjectTeam__c</fullName>
        <inlineHelpText>0=Black 1=Red 2=Yellow 3=Green</inlineHelpText>
        <label>Local Project Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0local_project_team</fullName>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1local_project_team</fullName>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2local_project_team</fullName>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3local_project_team</fullName>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_EA_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local EA App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_SFDC_Agreement_expire__c</fullName>
        <description>Enter expire date of the local agreement with SFDC</description>
        <label>Local SFDC Agreement expire</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Local_agreement_with_SFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fill in this checkbox if there is a local agreement to SFDC from the country.</description>
        <label>Local Agreement with SFDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MarketingPL__c</fullName>
        <label>Marketing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live - In Production</fullName>
                </value>
                <value>
                    <fullName>Implementation in Progress</fullName>
                </value>
                <value>
                    <fullName>Planned for Future 0 - 6 Months</fullName>
                </value>
                <value>
                    <fullName>Planned for Future - Greater than 6 Months</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Eloqua__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing (Eloqua)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mindset__c</fullName>
        <inlineHelpText>0=Black 1=Red 2=Yellow 3=Green</inlineHelpText>
        <label>Mindset</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0mindset</fullName>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1mindset</fullName>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2mindset</fullName>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3mindset</fullName>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Move_to_AX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Using ONE AX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ONE_AX_in_Use__c</fullName>
        <description>Fill in SBU using one AX</description>
        <label>ONE AX in Use</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Impl</fullName>
                </value>
                <value>
                    <fullName>Prev</fullName>
                </value>
                <value>
                    <fullName>Endo</fullName>
                </value>
                <value>
                    <fullName>Pros</fullName>
                </value>
                <value>
                    <fullName>Rest</fullName>
                </value>
                <value>
                    <fullName>Ortho</fullName>
                </value>
                <value>
                    <fullName>Equip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ONE_SFDC_Marketing_Modules__c</fullName>
        <label>ONE SFDC Marketing Modules</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ONE_SFDC_Marketing_Modules</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ONE_SFDC_Marketing_Platform__c</fullName>
        <label>ONE SFDC Marketing Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ONE_SFDC_Marketing_Platform</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ONE_SFDC_Sales_Modules__c</fullName>
        <label>ONE SFDC Sales Modules</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ONE_SFDC_Sales_Modules</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_Notes__c</fullName>
        <description>Add any specific notes of importance for the object usage (e.g. Orders only used by PRE or only marketing uses Campaigns)</description>
        <inlineHelpText>Add any specific notes of importance for the object usage (e.g. Orders only used by PRE or only marketing uses Campaigns)</inlineHelpText>
        <label>Object Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>